2006-06-19 Sandro Santilli <strk@refractions.net>

	* geom::GeometryFactory (cpp,h,inl): port info and doxygen dox.
	* geom::util::GeometryTransformer (cpp,h): updated port info.
	* tests/xmltester/XMLTester.cpp: tolerate invalid inputs.

2006-06-14 Sandro Santilli <strk@refractions.net>

	* source/geom/Coordinate.cpp, source/headers/geos/geom/Coordinate.h,
	source/headers/geos/geom/Coordinate.inl: let the compiler
	synthetize copy ctor and assignment op for Coordinate class
	to obtain better numerical stability.
	* tests/xmltester/XMLTester.cpp: added support
	for AreaTest ops.
	* source/operation/overlay/OverlayOp.cpp: use
	NodeMap::container and related typedefs, removed
	(int) casts, optimized loops.
	* source/geomgraph/EdgeEnd.cpp,
	source/headers/geos/geomgraph/DirectedEdge.h,
	source/headers/geos/geomgraph/DirectedEdge.inl,
	source/headers/geos/geomgraph/EdgeEnd.h:
	EdgeEnd::getEdge() made non-virtual and inlined.
	* source/operation/overlay/PolygonBuilder.cpp: fixed
	bug in placePolygonHoles and findShell (and actually improved
	performance of them).

2006-06-13 Sandro Santilli <strk@refractions.net>

	* operation::overlay::PolygonBuilder: cleanups.
	* source/headers/geos/io/WKTReader.inl: added missing include
	for GEOS_DEBUG set case, use stderr for debugging output.
	* source/operation/overlay/LineBuilder.cpp: fixed unused
	parameter warning.
	* source/headers/geos/geomgraph/GeometryGraph.h: changed
	GeometryGraph::lineEdgeMap set comparison function to
	be pointer-based. Should be safe and much faster. Available
	tests all succeed.
	* source/geom/Geometry.cpp: added self comparison check
	in compareTo().
	
2006-06-12 Sandro Santilli <strk@refractions.net>

	* source/simplify/LineSegmentIndex.cpp: explicitly initialized
	parent class in constructors.
	* source/headers/geos/index/quadtree/Root.h,
	source/headers/geos/operation/distance/ConnectedElementPointFilter.h,
	source/headers/geos/operation/polygonize/Polygonizer.h: