@@ -1,5 +1,6 @@
 2006-06-19 Sandro Santilli <strk@refractions.net>
 
+	* source/geom/Polygon.cpp: optimized loops.
 	* geom::GeometryFactory (cpp,h,inl): port info and doxygen dox.
 	* geom::util::GeometryTransformer (cpp,h): updated port info.
 	* tests/xmltester/XMLTester.cpp: tolerate invalid inputs.
